# anki-enhanced-cloze

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: ci.yml
scripts/: build.py
src/enhanced_cloze/: __init__.py  config.py  constants.py  editor.py  menu.py  patches.py  setup_jquery.py
src/enhanced_cloze/note_type/: __init__.py
