[project]
name = "anki-enhanced-cloze"
version = "0.0.0"
requires-python = ">=3.9"
dependencies = [
    "aqt",
]

[dependency-groups]
dev = [
    "debugpy",
    "mypy",
    "pre-commit",
    "pylint",
    "black",
]

[tool.mypy]
files=[
    "src/enhanced_cloze",
]
exclude = [
    "src/enhanced_cloze/lib/",
    "src/enhanced_cloze/ankiaddonconfig/",
]
no_strict_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "enhanced_cloze.ankiaddonconfig.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "anki._legacy",
    "anki._vendor",
    "_manylinux"
]
ignore_errors = true
